@@ -1,3 +1,9 @@
+2020-11-18 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/*/*.c: Replace u_log_message macro with geda_log:
+
+        * src/object/o_net.c
+
 2020-11-17 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/*/*.c: Replace u_log_message macro with geda_log:
